# rhum-recipes-api

./: .gitignore  .mise.toml  README.md  pyproject.toml  rhum_recipes.db.back  schema.mermaid
app/: __init__.py  database.py  main.py  migrate_ingredients.py  migrate_stock_state.py  models.py
app/routers/: clients.py  ingredients.py  orders.py  recipes.py  stock.py  users.py
black-sails-api/.specify/extensions/: .registry
black-sails-api/.specify/integrations/: speckit.manifest.json
black-sails-api/.specify/workflows/: workflow-registry.json
openspec/: config.yaml
openspec/changes/archive/2026-06-02-manage-light-dark-mode/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-02-manage-light-dark-mode/specs/theme-preferences/: spec.md
openspec/changes/archive/2026-06-05-split-stock-states/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-05-split-stock-states/specs/batch-tracking/: spec.md
openspec/specs/batch-tracking/: spec.md
openspec/specs/theme-preferences/: spec.md
rhum-recipes-api/.specify/: init-options.json
rhum-recipes-api/.specify/integrations/: agy.manifest.json
tests/: test_recipes.py  test_stock.py  test_users.py
toolbox/: manage_data.py
